--- a/_notebooks/nulls.ipynb
+++ b/_notebooks/nulls.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "5309d635-c241-4e02-b5c1-d54547f35c34",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "36db7051-a69b-44c9-94f2-774db2cb5e41",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "8e3281e7-3878-4bc0-92b8-8802148b5693",
    "metadata": {},
    "outputs": [
@@ -41,16 +41,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 39346 entries, 0 to 39345\n",
+      "RangeIndex: 39342 entries, 0 to 39341\n",
       "Data columns (total 6 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   hash_id      39346 non-null  object \n",
-      " 1   postal_code  39346 non-null  object \n",
-      " 2   location     38810 non-null  object \n",
-      " 3   date         39340 non-null  object \n",
-      " 4   jobs         38856 non-null  float64\n",
-      " 5   company      39346 non-null  object \n",
+      " 0   hash_id      39342 non-null  object \n",
+      " 1   jobs         38941 non-null  float64\n",
+      " 2   company      39342 non-null  object \n",
+      " 3   location     38806 non-null  object \n",
+      " 4   date         39336 non-null  object \n",
+      " 5   postal_code  39342 non-null  object \n",
       "dtypes: float64(1), object(5)\n",
       "memory usage: 1.8+ MB\n"
      ]
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "af1feff6-7352-4b25-b614-0ea28c83652a",
    "metadata": {},
    "outputs": [
@@ -88,87 +88,87 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>hash_id</th>\n",
-       "      <th>postal_code</th>\n",
-       "      <th>location</th>\n",
-       "      <th>date</th>\n",
        "      <th>jobs</th>\n",
        "      <th>company</th>\n",
+       "      <th>location</th>\n",
+       "      <th>date</th>\n",
+       "      <th>postal_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>2021-09-16</td>\n",
        "      <td>40.0</td>\n",
        "      <td>Bean’s Cafe</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>2021-09-16</td>\n",
+       "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>Prudhoe Bay</td>\n",
-       "      <td>2021-07-02</td>\n",
        "      <td>134.0</td>\n",
        "      <td>Kakivik Asset Mgmt</td>\n",
+       "      <td>Prudhoe Bay</td>\n",
+       "      <td>2021-07-02</td>\n",
+       "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>Fairbanks, North Pole</td>\n",
-       "      <td>2021-04-30</td>\n",
        "      <td>185.0</td>\n",
        "      <td>First Student</td>\n",
+       "      <td>Fairbanks, North Pole</td>\n",
+       "      <td>2021-04-30</td>\n",
+       "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>2021-04-12</td>\n",
        "      <td>59.0</td>\n",
        "      <td>GCI Communication Group</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>2021-04-12</td>\n",
+       "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
-       "      <td>AK</td>\n",
+       "      <td>1234.0</td>\n",
+       "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
        "      <td>Anchorage and 20 smaller Alaska communities, p...</td>\n",
        "      <td>2020-09-30</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
+       "      <td>AK</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             hash_id postal_code  \\\n",
-       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...          AK   \n",
-       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...          AK   \n",
-       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...          AK   \n",
-       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...          AK   \n",
-       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...          AK   \n",
+       "                                             hash_id    jobs  \\\n",
+       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...    40.0   \n",
+       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...   134.0   \n",
+       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...   185.0   \n",
+       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...    59.0   \n",
+       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...  1234.0   \n",
        "\n",
-       "                                            location        date   jobs  \\\n",
-       "0                                          Anchorage  2021-09-16   40.0   \n",
-       "1                                        Prudhoe Bay  2021-07-02  134.0   \n",
-       "2                              Fairbanks, North Pole  2021-04-30  185.0   \n",
-       "3                                          Anchorage  2021-04-12   59.0   \n",
-       "4  Anchorage and 20 smaller Alaska communities, p...  2020-09-30    NaN   \n",
+       "                                             company  \\\n",
+       "0                                        Bean’s Cafe   \n",
+       "1                                 Kakivik Asset Mgmt   \n",
+       "2                                      First Student   \n",
+       "3                            GCI Communication Group   \n",
+       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...   \n",
        "\n",
-       "                                             company  \n",
-       "0                                        Bean’s Cafe  \n",
-       "1                                 Kakivik Asset Mgmt  \n",
-       "2                                      First Student  \n",
-       "3                            GCI Communication Group  \n",
-       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...  "
+       "                                            location        date postal_code  \n",
+       "0                                          Anchorage  2021-09-16          AK  \n",
+       "1                                        Prudhoe Bay  2021-07-02          AK  \n",
+       "2                              Fairbanks, North Pole  2021-04-30          AK  \n",
+       "3                                          Anchorage  2021-04-12          AK  \n",
+       "4  Anchorage and 20 smaller Alaska communities, p...  2020-09-30          AK  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "1c2809bd-77f1-407e-8854-f6647a1772e6",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "1          RI      3"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "0850b407-4234-479c-8b84-729ef124a457",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "ff87e812-e28f-4df0-8f6d-bac36910c54c",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
        "14          WI      1"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "fe35165f-3a4f-4054-bb0c-e4c91f06afa9",
    "metadata": {},
    "outputs": [
@@ -494,101 +494,81 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>AL</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>CA</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>CT</td>\n",
-       "      <td>28</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ID</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>DC</td>\n",
-       "      <td>1</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>ID</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>IN</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
        "      <td>MD</td>\n",
-       "      <td>44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>MO</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>6</th>\n",
+       "      <td>MO</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>MT</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>8</th>\n",
        "      <td>NE</td>\n",
-       "      <td>157</td>\n",
+       "      <td>152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>9</th>\n",
        "      <td>NJ</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>10</th>\n",
        "      <td>NM</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>11</th>\n",
        "      <td>NY</td>\n",
        "      <td>106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>12</th>\n",
        "      <td>OR</td>\n",
        "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>13</th>\n",
        "      <td>RI</td>\n",
-       "      <td>6</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>SD</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>14</th>\n",
        "      <td>TX</td>\n",
        "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>UT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>15</th>\n",
        "      <td>WI</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -598,29 +578,25 @@
       ],
       "text/plain": [
        "   postal_code  total\n",
-       "0           AK      2\n",
-       "1           AL      1\n",
-       "2           CA      2\n",
-       "3           CT     28\n",
-       "4           DC      1\n",
-       "5           ID     17\n",
-       "6           IN     32\n",
-       "7           MD     44\n",
-       "8           MO     10\n",
-       "9           MT      2\n",
-       "10          NE    157\n",
-       "11          NJ     15\n",
-       "12          NM      3\n",
-       "13          NY    106\n",
-       "14          OR     34\n",
-       "15          RI      6\n",
-       "16          SD      1\n",
-       "17          TX     26\n",
-       "18          UT      1\n",
-       "19          WI      2"
+       "0           AL      1\n",
+       "1           CA      2\n",
+       "2           CT     18\n",
+       "3           ID     15\n",
+       "4           IN      9\n",
+       "5           MD     10\n",
+       "6           MO      4\n",
+       "7           MT      2\n",
+       "8           NE    152\n",
+       "9           NJ     15\n",
+       "10          NM      3\n",
+       "11          NY    106\n",
+       "12          OR     34\n",
+       "13          RI      2\n",
+       "14          TX     26\n",
+       "15          WI      2"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
